feat:register page with imputs

--- a/react-dental/src/layout/Register/RegisterPage.css
+++ b/react-dental/src/layout/Register/RegisterPage.css
@@ -1,3 +1,7 @@
-.h1prueba{
-    margin-top: 10vh;
+.RegisterPageRowCentral {
+    margin-top: 20vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
